force-app/main/default/objects/Customer_Community_Tab_Settings__c/Customer_Community_Tab_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Customer Community Tab Settings</label>
</CustomObject>