force-app/main/default/objects/Customer_Community_Tab_Settings__c/fields/Forward_To_Custom_Start_Page__c.field-meta.xml
<CustomField>
    <fullName>Forward_To_Custom_Start_Page__c</fullName>
    <label>Forward To Custom Start Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>