force-app/main/default/objects/Customer_Community_Tab_Settings__c/fields/Hide_Standard_Tabs__c.field-meta.xml
<CustomField>
    <fullName>Hide_Standard_Tabs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Standard Tabs</label>
    <type>Checkbox</type>
</CustomField>