force-app/main/default/objects/Customer_Community_Tab_Settings__c/fields/Show_Order_Info_Tab__c.field-meta.xml
<CustomField>
    <fullName>Show_Order_Info_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Order Info Tab</label>
    <type>Checkbox</type>
</CustomField>